# flight_demo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
src/: airport_area.py  airports.py  az_queue.py  az_table.py  config.py  flight_data.py  flight_status.py  generate.py  list_flights.py  list_flights_at_airport.py  main.py  new_flight.py  plot.py  plotonmap.ipynb  schemas.py
tests/: test_class.py  test_class_demo.py  test_sample.py
